<resources>
    <string name="app_name">Personal Library</string>
    <string name="judul">JUDUL</string>
    <string name="masukkan_judul_buku">Judul Buku</string>
    <string name="pengarang">PENGARANG</string>
    <string name="masukkan_nama_pengarang">Nama Pengarang</string>
    <string name="penerbit">PENERBIT</string>
    <string name="kategori">KATEGORI</string>
    <string name="no_isbn">NO. ISBN</string>
    <string name="masukkan_no_isbn">No.ISBN</string>
    <string name="masukkan_kategori_buku">Kategori Buku</string>
    <string name="upload_cover_buku">Upload Cover Buku</string>
    <string name="simpan">SIMPAN</string>
    <string name="masukkan_nama_penerbit">Nama Penerbit</string>
    <string name="judul_a_z">Judul A-Z</string>
    <string name="judul_z_a">Judul Z-A</string>
    <string name="hapus">Hapus</string>
    <string name="cover_buku">COVER BUKU</string>
    <string name="edit_buku">Edit Buku</string>
    <string name="sign_in">Masuk</string>
    <string name="register_here">DAFTAR</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Ulangi Password</string>
    <string name="register">Daftar</string>
    <string name="search_hint">Judul buku, kategori, dll . .</string>
    <string name="search_judul">Cari</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="hapus_buku">Hapus Buku</string>
</resources>
